// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete fail 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "disabled": [Function],
      "onclick": [Function],
      "onsubmit": [Function],
    },
  },
  "html": "
<!--if-->
<!--ErrorsPanel-->
<div class=\\"modal\\">
  <div class=\\"content\\">
    <div class=\\"header\\"> Delete project </div>
    <div class=\\"body\\"> Do you want delete project \\"Test\\"? </div>
    <div class=\\"footer\\">
      <button class=\\"ok danger\\" disabled=\\"\\"><span>Confirm</span></button>
      <button class=\\"cancel\\"><span>Cancel</span></button>
    </div>
  </div>
</div>
<!--Modal-->
<!--if-->
<!--if-->
",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "afterRender": [Function],
    "dataLoaded": true,
    "dataSaving": true,
    "directives": Object {
      "disabled": [Function],
      "onclick": [Function],
      "onsubmit": [Function],
    },
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "renderAsync": false,
    "renderDependence": Array [],
    "types": Array [],
  },
}
`;

exports[`render errors 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "disabled": [Function],
      "onclick": [Function],
      "onsubmit": [Function],
    },
  },
  "html": "
<ul class=\\"errors-panel\\">
  <li>Load project fail!</li>
</ul>
<!--if-->
<!--ErrorsPanel-->
<!--if-->
<!--if-->
",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "afterRender": [Function],
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "disabled": [Function],
      "onclick": [Function],
      "onsubmit": [Function],
    },
    "errors": Array [
      "Load project fail!",
    ],
    "project": Object {},
    "renderAsync": false,
    "renderDependence": Array [],
    "types": Array [],
  },
}
`;

exports[`renders correctly 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "disabled": [Function],
      "onclick": [Function],
      "onsubmit": [Function],
    },
  },
  "html": "
<div class=\\"page-data-loading\\">
  <div class=\\"sk-cube-grid\\">
    <div class=\\"sk-cube sk-cube1\\"></div>
    <div class=\\"sk-cube sk-cube2\\"></div>
    <div class=\\"sk-cube sk-cube3\\"></div>
    <div class=\\"sk-cube sk-cube4\\"></div>
    <div class=\\"sk-cube sk-cube5\\"></div>
    <div class=\\"sk-cube sk-cube6\\"></div>
    <div class=\\"sk-cube sk-cube7\\"></div>
    <div class=\\"sk-cube sk-cube8\\"></div>
    <div class=\\"sk-cube sk-cube9\\"></div>
  </div>
</div>
<!--PageDataLoading-->
<!--if-->
",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "afterRender": [Function],
    "dataLoaded": false,
    "dataSaving": false,
    "directives": Object {
      "disabled": [Function],
      "onclick": [Function],
      "onsubmit": [Function],
    },
    "errors": Array [],
    "project": Object {},
    "renderAsync": false,
    "renderDependence": Array [],
    "types": Array [],
  },
}
`;
